2011-12-23  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add RH bug number which alerted us to
	the problem to the 7103725 backport.

2011-12-22  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add new patches.
	* patches/openjdk/6851973-kerberos.patch,
	* patches/openjdk/7091528-javadoc_class_files.patch,
	* patches/openjdk/7103725-ssl_beast_regression.patch:
	Add OpenJDK backports.
	* NEWS: Updated.

2011-12-22  Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/thumb2.cpp (Thumb2_Safepoint):
	Disable.

2011-12-20  Andrew John Hughes  <ahughes@redhat.com>

	* jtreg/JavaTest.cmdMgrs.lst,
	* jtreg/JavaTest.toolMgrs.lst,
	* jtreg/META-INF/MANIFEST.MF,
	* jtreg/README,
	* jtreg/com/sun/interview/AllFilesFileFilter.java,
	* jtreg/com/sun/interview/Checklist.java,
	* jtreg/com/sun/interview/ChoiceArrayQuestion.java,
	* jtreg/com/sun/interview/ChoiceQuestion.java,
	* jtreg/com/sun/interview/CompositeQuestion.java,
	* jtreg/com/sun/interview/DirectoryFileFilter.java,
	* jtreg/com/sun/interview/ErrorQuestion.java,
	* jtreg/com/sun/interview/ExtensionFileFilter.java,
	* jtreg/com/sun/interview/FileFilter.java,
	* jtreg/com/sun/interview/FileListQuestion.java,
	* jtreg/com/sun/interview/FileQuestion.java,
	* jtreg/com/sun/interview/FilesAndDirectoriesFileFilter.java,
	* jtreg/com/sun/interview/FinalQuestion.java,
	* jtreg/com/sun/interview/FloatQuestion.java,
	* jtreg/com/sun/interview/InetAddressQuestion.java,
	* jtreg/com/sun/interview/IntQuestion.java,
	* jtreg/com/sun/interview/Interview.java,
	* jtreg/com/sun/interview/InterviewQuestion.java,
	* jtreg/com/sun/interview/InterviewSet.java,
	* jtreg/com/sun/interview/ListQuestion.java,
	* jtreg/com/sun/interview/NullQuestion.java,
	* jtreg/com/sun/interview/Properties2.java,
	* jtreg/com/sun/interview/PropertiesQuestion.java,
	* jtreg/com/sun/interview/Question.java,
	* jtreg/com/sun/interview/StringListQuestion.java,
	* jtreg/com/sun/interview/StringQuestion.java,