@@ -1,3 +1,8 @@
+2012-01-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* Makefile.am: Fixed path to excludelist.jdk.jtx
+	file containing black list of JDK JTreg tests.
+
 2011-12-23  Andrew John Hughes  <ahughes@redhat.com>
 
 	* NEWS: Add RH bug number which alerted us to
